--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,6 @@
     <string name="fifthExerciseText">Exercise 5</string>
     <string name="sixthExerciseText">Exercise 6</string>
     <string name="seventhExerciseText">Exercise 7</string>
+    <string name="exerciseBoxHeight">70dp</string>
+    <string name="scrollViewHeight">580dp</string>
 </resources>
